--- a/src/Card.css
+++ b/src/Card.css
@@ -4,18 +4,21 @@
     overflow: hidden;
     box-shadow: 0px 6px 18px -9px rgba(0,0,0,0.75);
     transition: transform 100ms ease-in;
-    cursor: pointer;
 }
+
 
 .card:hover {
     transform: scale(1.07);
+    
 }
 
 .card > img {
-    object-fit: fill;
+    object-fit: contain;
     min-width: 300px;
     min-height: 200px;
+    max-width: 720px;
     width: 100%;
+    
 }
 
 .card__info {
@@ -37,3 +40,4 @@
     margin-top: 8px;
     margin-bottom: 8px;
 }
+
