--- a/src/Header.css
+++ b/src/Header.css
@@ -11,7 +11,8 @@
 .header__icon {
     object-fit: contain;
     height: 100px;
-    margin-left: 20px; 
+    margin-left: 20px;
+    cursor: pointer; 
 }
 .header__center {
     display: flex;
