--- a/src/Search.css
+++ b/src/Search.css
@@ -1,8 +1,8 @@
 .search {
     position: absolute;
-    top : 35px;
-    left : 25%;
-    width:  100vw;
+    top: 35px;
+    left: 25%;
+    width: 100vw;
 }
 
 .search > h2 {
@@ -14,18 +14,19 @@
     background-color: white;
     position: absolute;
     left: 0;
-    top: 380px;
+    top: 350px;
 }
+
 .search > input {
     width: 539px;
     padding: 20px;
     position: absolute;
     left: 0;
     height: 30px;
-    top: 420px;
+    top: 400px;
     border: none;
-}
-
+  }
+  
 .search > input:focus {
     outline-width: 0;
 }
@@ -33,14 +34,14 @@
 .search > button {
     position: absolute;
     left: 0;
-    top: 480px;
-    text-transform: inherit;
+    top: 460px;
+    text-transform: inherit !important;
     background-color: #ff7779;
     color: white;
     width: 579px;
-}
+  }
 
-.search >button:hover {
+.search > button:hover {
     background-color: white;
     color: #ff7779;
 }
